--- a/farm.yml
+++ b/farm.yml
@@ -86,6 +86,8 @@ all:
 
     # ................................................
     helpers:
+
+      #............................................
       hosts:
         helper1:
           ansible_host: 192.168.11.10
@@ -93,6 +95,7 @@ all:
           pifarm_install_prometheus: true
           pifarm_mount_usb_drive: true
 
+      #............................................
       vars:
         ansible_user: farmer
 
@@ -109,13 +112,13 @@ all:
         # SMELL do I need this....the prometheus collector changed the configuration file.
         pifarm_node_exporter: true
 
-        # Setup the prometheus server for metrics collection
-        # currently only one level deep
-        # SMELL  single target only for now
-        prometheus_collector: True
-        prometheus_install_snmp: True
-        prometheus_snmp_target: 192.168.11.2
-        prometheus_tsdb_path: /u01/prometheus/metrics2/
+        # # Setup the prometheus server for metrics collection
+        # # currently only one level deep
+        # # SMELL  single target only for now
+        # prometheus_collector: True
+        # prometheus_install_snmp: True
+        # prometheus_snmp_target: 192.168.11.2
+        # prometheus_tsdb_path: /u01/prometheus/metrics2/
 
         # TODO 
         # https://stackoverflow.com/questions/41908715/ansible-with-subelements
@@ -158,11 +161,32 @@ all:
         - path: "/clusterfs"
           location: "192.168.40.14:/PiFarmCluster"
 
-        # configure as  Promtail collector for system logs
-        collect_logs: true
+        # # configure as  Promtail collector for system logs
+        # collect_logs: true
 
-        # export the logs to myself...better than a scrap ?
-        export_rsyslog: True
+        # # export the logs to myself...better than a scrape ?
+        # export_rsyslog: True
+
+
+    hosts:
+      helper1:
+      
+      vars:
+          # Setup the prometheus server for metrics collection
+          # currently only one level deep
+          # SMELL  single target only for now
+          prometheus_collector: True
+          prometheus_install_snmp: True
+          prometheus_snmp_target: 192.168.11.2
+          prometheus_tsdb_path: /u01/prometheus/metrics2/
+
+          # configure as  Promtail collector for system logs
+          collect_logs: true
+
+          # export the logs to myself...better than a scrape ?
+          export_rsyslog: True
+
+
 
 
     # ................................................
