mib downloader and autoconfig for prometheus.  loki templates.

--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ roles/ansible-role-grafana/
 
 # my temporary testing scripts that I don't want released
 ./scratch_*
-
+./tmp_*
 
 #
 authorized_keys
