--- a/farm.yml
+++ b/farm.yml
@@ -132,6 +132,12 @@ all:
           - path: "/clusterfs"
             location: "192.168.40.14:/PiFarmCluster"
 
+        helper2:
+          ansible_host: 192.168.11.211
+          pifarm_hostname: pi-helper2
+          ansible_user: lavender
+
+        
 
       #............................................
       vars:
