added headless-pi-setup back

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = roles/k3s_ansible
 	url = git@github.com:jackaltx/k3s-ansible.git
 	branch = master
+[submodule "roles/headless-pi-setup"]
+	path = roles/headless-pi-setup
+	url = git@github.com:jackaltx/headless-pi-setup-on-rhel.git
